# tunebox

./: .gitignore  Cargo.toml
src/: main.rs  synth.rs
src/synth/: adsr.rs  provider.rs
